--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongodb": "^3.0.7"
+    "express-auth0-simple": "^4.0.0-rc.5",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.0.7",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.4"
